# jobsearch

./: .dockerignore  .gitignore  Dockerfile  conftest.py  pyproject.toml
.github/workflows/: deploy.yml
deploy/: docker-compose.dev.yml  update-ecs.py
deploy/k8s/: cluster_issuer.yaml  namespace.yaml
deploy/k8s/django/: collectstatic-job.yaml  cronjob.yaml  deployment.yaml  ingress.yaml  job.yaml  migrate-job.yaml  pv.yaml  pvc.yaml  service.yaml
deploy/k8s/grafana/: g.yaml
deploy/k8s/loki/: loki.yaml
deploy/k8s/nginx/: cm.yaml  deployment.yaml  service.yaml
deploy/k8s/postgres/: cm.yaml  deployment.yaml
deploy/terraform/: 05_iam.tf  06_logs.tf  10_events.tf
deploy/terraform/templates/: django_app.json.tpl
jobsearch/: admin.py  asgi.py  middleware.py  models.py  settings.py  urls.py  utils.py  views.py  wsgi.py
jobsearch/management/commands/: scrape_jobs.py
jobsearch/migrations/: 0001_initial.py  0002_rename_content_jobposting_description_and_more.py  0003_badjob.py  0004_badjob_company_badjob_description_badjob_location_and_more.py  0005_badcompany.py  0006_badlocation.py  0007_badjob_updated_at_jobposting_updated_at_and_more.py
jobsearch/static/jobsearch/admin/: autosave_applied.js
jobsearch/tests/: test_utils.py
nginx/: nginx.conf
terraform/: 07_ecs.tf  09_rds.tf
