[project]
name = "jobsparser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.14.2",
    "django>=5.2.8",
    "gql>=4.0.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "boto3>=1.41.3",
    "click>=8.3.1",
]
