[project]
name = "jobsparser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.14.2",
    "django>=5.2.8",
    "gql>=4.0.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "boto3>=1.41.3",
    "click>=8.3.1",
    "ruff>=0.9.0",
    "ty>=0.0.1a14",
    "pytest>=8.3.0",
    "pytest-django>=4.9.0",
    "pytest-httpx>=0.35.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["jobsearch"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "jobsearch.settings"
python_files = ["tests/test_*.py"]
